#6493: fixes sidebar body z-index (#6602)
* fixes sidebar body z-index

* fixes snapshots

--- a/src/sidebar/Tabs.module.scss
+++ b/src/sidebar/Tabs.module.scss
@@ -202,3 +202,7 @@
     background-color: rgba(0, 0, 0, 0.07);
   }
 }
+
+.tabContainer {
+  z-index: 10;
+}
